// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox demo -- checkbox 1`] = `
.c25 {
  margin-right: 8px;
  font-size: 14px;
}

.gElRGJ .c24 {
  color: #526075;
}

.c23 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c23 .c24 {
  color: #4074e1;
}

.bEXrKy .c24 {
  color: #d9d9d9;
}

.cEKCAE .c24 {
  color: #526075;
}

.fRCuVe .c24 {
  color: #526075;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c22 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c22 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c22 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c22 .c15,
.c22 .c17 {
  line-height: 16px;
}

.c22 .c15 {
  padding-right: 20px;
}

.c22 .c17 {
  padding-left: 20px;
}

.c22 .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c22 .c18 {
  left: 100%;
  margin-left: -19px;
}

.c22 .c20 {
  background: #9fecc0;
}

.c22 .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c22"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c23"
    >
      <i
        class="c24 c25 uc-fe-icon icon__checkbox-ed "
        type="checkbox-ed"
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-checked 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c3 .c1 {
  color: #4074e1;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        type="checkbox"
      />
      unchecked
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c3"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox-ed "
        type="checkbox-ed"
      />
      checked
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-disabled 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.bQocJD .c1 {
  color: #4074e1;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 .c1 {
  color: #d9d9d9;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        type="checkbox"
      />
      common
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
      disabled=""
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        disabled=""
        type="checkbox"
      />
      disabled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-size 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c3 .c1 {
  color: #526075;
}

.bQocJD .c1 {
  color: #4074e1;
}

.bEXrKy .c1 {
  color: #d9d9d9;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
}

.c4 .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        type="checkbox"
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        type="checkbox"
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c4"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox "
        type="checkbox"
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-uncontrolled 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.gElRGJ .c1 {
  color: #526075;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #4074e1;
}

.bEXrKy .c1 {
  color: #d9d9d9;
}

.cEKCAE .c1 {
  color: #526075;
}

.fRCuVe .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox-ed "
        type="checkbox-ed"
      />
      controlled
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0"
    >
      <i
        class="c1 c2 uc-fe-icon icon__checkbox-ed "
        type="checkbox-ed"
      />
      uncontrolled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- group 1`] = `
.c26 {
  margin-right: 8px;
  font-size: 14px;
}

.c24 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c24 .c25 {
  color: #526075;
}

.bQocJD .c25 {
  color: #4074e1;
}

.bEXrKy .c25 {
  color: #d9d9d9;
}

.cEKCAE .c25 {
  color: #526075;
}

.fRCuVe .c25 {
  color: #526075;
}

.c22 .c23 {
  margin-right: 8px;
}

.c22 .c23:last-child {
  margin-right: 0;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2 {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sc-25j3mq-2:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.kAJPhs .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.kAJPhs .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.kAJPhs .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.kAJPhs .c15,
.kAJPhs .c17 {
  line-height: 16px;
}

.kAJPhs .c15 {
  padding-right: 20px;
}

.kAJPhs .c17 {
  padding-left: 20px;
}

.kAJPhs .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.kAJPhs .c18 {
  left: 100%;
  margin-left: -19px;
}

.kAJPhs .c20 {
  background: #9fecc0;
}

.kAJPhs .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <span
            class="c23 c24"
          >
            <i
              class="c25 c26 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            1
          </span>
          <span
            class="c23 c24"
          >
            <i
              class="c25 c26 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            2
          </span>
          <span
            class="c23 c24"
          >
            <i
              class="c25 c26 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            3
          </span>
          <span
            class="c23 c24"
          >
            <i
              class="c25 c26 uc-fe-icon icon__checkbox "
              type="checkbox"
            />
            4
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c22"
    >
      <span
        class="c23 c24"
      >
        <i
          class="c25 c26 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        class="c23 c24"
      >
        <i
          class="c25 c26 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        class="c23 c24"
      >
        <i
          class="c25 c26 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        3
      </span>
      <span
        class="c23 c24"
      >
        <i
          class="c25 c26 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        4
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-disabled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.bQocJD .c3 {
  color: #4074e1;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 .c3 {
  color: #d9d9d9;
}

.cEKCAE .c3 {
  color: #526075;
}

.fRCuVe .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          disabled=""
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          disabled=""
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          disabled=""
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-options 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.bQocJD .c3 {
  color: #4074e1;
}

.bEXrKy .c3 {
  color: #d9d9d9;
}

.cEKCAE .c3 {
  color: #526075;
}

.fRCuVe .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        option-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        option-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        option-3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        checkbox-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        checkbox-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        checkbox-3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-size 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c5 .c3 {
  color: #526075;
}

.bQocJD .c3 {
  color: #4074e1;
}

.bEXrKy .c3 {
  color: #d9d9d9;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
}

.c6 .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c6"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 c6"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 c6"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-uncontrolled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c5 .c3 {
  color: #4074e1;
}

.bEXrKy .c3 {
  color: #d9d9d9;
}

.cEKCAE .c3 {
  color: #526075;
}

.fRCuVe .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        1
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox-ed "
          type="checkbox-ed"
        />
        2
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox-ed "
          type="checkbox-ed"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox-ed "
          type="checkbox-ed"
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        2
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="c3 c4 uc-fe-icon icon__checkbox-ed "
          type="checkbox-ed"
        />
        3
      </span>
    </div>
  </div>
</div>
`;
